test: Delimiters 테스트 코드 수정
- 삭제된 getter가 아닌 동등성을 비교하여 검증한다.